--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-test-renderer": "^16.6.3"
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "react-test-renderer": "^16.6.3",
+    "rimraf": "^2.6.2"
   }
 }
